[project]
name = "asd-lang-tasks-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "awscli>=1.44.20",
    "boto3>=1.42.30",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "google-api-python-client>=2.188.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "python-dotenv>=1.2.1",
]
